# duplicates-detector-oss

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
DuplicatesDetectorGUI/: .gitattributes  UITests-E2E.xctestplan  UITests-Fast.xctestplan  project.yml
DuplicatesDetectorGUI/Config/: App-Info.plist
DuplicatesDetectorGUI/DuplicatesDetector.xcodeproj/: project.pbxproj
DuplicatesDetectorGUI/Sources/: DuplicatesDetector.entitlements
DuplicatesDetectorGUI/Tests/: AccessibilityTests.swift  ActionLogEntryTests.swift  ActionLogWriterTests.swift  AnalyticsDataTests.swift  AppIntentsTests.swift  BackgroundScanEngineTests.swift  CacheManagerTests.swift  DependencyInstallerTests.swift  DesignTokensTests.swift  DirectoryFilterTests.swift  DirectoryWatcherTests.swift  EXIFComparatorTests.swift  ErrorInfoTests.swift  ExportFormatTests.swift  FileStatusMonitorTests.swift  FilenameComparatorTests.swift  FixtureLoader.swift  FlagAssemblerTests.swift  HistoryActionTests.swift  IgnoreListManagerTests.swift  InstallProgressModelTests.swift  JSONEnvelopeParserTests.swift  KnownFileTests.swift  LevenshteinRatioTests.swift  MenuBarManagerTests.swift  NotificationManagerTests.swift  Phase5ComparisonTests.swift  PhotoAssetMetadataTests.swift  PhotoKitAdaptationTests.swift  PhotoKitBridgeTests.swift  PhotosCacheDBTests.swift  PhotosScorerTests.swift  (+19 more)
duplicates_detector/: __init__.py  __main__.py  actionlog.py  advisor.py  analytics.py  audio.py  cache.py  cache_db.py  cli.py  clip.py  comparators.py  config.py  content.py  deleter.py  filters.py  grouper.py  html_report.py  ignorelist.py  keeper.py  metadata.py  pipeline.py  progress.py  reporter.py  scanner.py  scorer.py  session.py  sidecar.py  sorter.py  summary.py  tfidf.py  thumbnails.py  undoscript.py
man/: duplicates-detector.1  includes.1
scripts/: bundle-cli.sh  create-dmg.sh  generate_manpage.py  release.py
tests/: conftest.py  generate_integration_media.py  generate_media.py  test_actionlog.py  test_advisor.py  test_analytics.py  test_audio.py  test_audio_mode.py  test_bugfix_four_features.py  test_cache.py  test_cache_db.py  test_cache_workers.py  test_cli.py  test_clip.py  test_comparators.py  test_config.py  test_content.py  test_deleter.py  test_document_comparators.py  test_document_metadata.py  test_document_scorer.py  test_document_simhash.py  test_document_tfidf.py  test_edge_blank_frames.py  test_edge_malformed.py  test_edge_paths.py  test_edge_permissions.py  test_edge_race.py  test_edge_symlinks.py  test_edge_ultrashort.py  test_filters.py  test_generate_manpage.py  test_grouper.py  test_html_report.py  test_ignorelist.py  test_integ_audio.py  test_integ_codecs.py  test_integ_corrupt.py  test_integ_extreme.py  test_integ_images.py  (+23 more)
(+143 files in other folders)
